--- a/docs/ToDo
+++ b/docs/ToDo
@@ -1,3 +1,11 @@
 Whats left to do: 
 
 Make all attributes public
+Finish the scheduling
+    No conflicts in schedule
+    Finish code
+Error Handling
+
+
+Stretch
+tty better user interface
